deploy/ingress/nyamnyam-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyamnyam-api-ingress
  namespace: nyamnyam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    # 실제 서비스 배포용 
    - host: api.nyamnyam.kr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: swagger-service
                port:
                  number: 80
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-service-stable
                port:
                  number: 8080
          - path: /chat(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-service-stable
                port:
                  number: 8080
          - path: /post(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: post-service-stable
                port:
                  number: 8080
          - path: /restaurant(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: restaurant-service-stable
                port:
                  number: 8080
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-stable
                port:
                  number: 8080
